('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.13.2

  - Make foreign_key_info() respect FetchHashKeyName (CPAN bug #46103) [GSM]
  - Fix problem with foreign_key_info() and NAME_uc (CPAN bug #46109) [GSM]
  - Improve Win32 README notes [Curtis Jewell]
  - Fix spelling error in type_info (CPAN bug #47786) [justin.d.hunter@gmail.com]

2.13.1 Released April 23, 2009 (subversion r12713)

  - Fix leak in pg_warn (CPAN bug #45163) [rweikusat@mssgmbh.com]

2.13.0 Released April 13, 2009 (subversion r12695)

  - Ensure we always set sqlstate inside of pg_st_prepare_statement
    (CPAN bug #44732) [rweikusat@mssgmbh.com]
  - When libpq has a connection error, return SQLSTATE 08000 ( "CONNECTION EXCEPTION" )
    instead of the more generic 02000 ( "DATA EXCEPTION" ) (CPAN bug #44744)
    [rweikusat@mssgmbh.com]
  - Fix minor Perl::Critic nags (CPAN bug #44704) (Debian #bug 521969) [GSM]
  - Clarify change of $dbh->{Name} behavior (CPAN bug 44985) [GSM]

2.12.0 Released March 28, 2009 (subversion r12627)

  - Change large object interface from lo_* to pg_lo_* and make them accessible 
    via direct $dbh calls (e.g. $dbh->pg_lo_import instead of $dbh->func(..,'pg_lo_import').
    The use of $dbh->func(... 'lo_*') is deprecated. [GSM] (CPAN bug #44467)
  - Throw an exception for large_object functions called when AutoCommit is on, 
    but allow pg_lo_import and pg_lo_export to work. Reported by Kynn Jones.
    [GSM] (CPAN bug #44461)
  - Fix a memory leak when parsing returned arrays. Reported by Bálint Szilakszi.
    [GSM] (CPAN bug #44225)
  - Do proper dequoting of boolean arrays [Armando Santos, GSM] (CPAN bug #43768)
  - Use pg_get_expr in column_info when available [Adam Sjøgren]
  - Fix minor bugs in POD docs. [Frank Wiegand] (CPAN bug #44242)
  - Fix minor bug in POD docs. [Tim Mattison]

2.11.8 Released December 28, 2008 (subversion r12161)

  - Fix minor bug in t/12placeholders.t test (CPAN bug #41723)

2.11.7 Released December 13, 2008 (subversion r12158)
