@@ -6,6 +6,8 @@
   - Fix problem with foreign_key_info() and NAME_uc (CPAN bug #46109) [GSM]
   - Improve Win32 README notes [Curtis Jewell]
   - Fix spelling error in type_info (CPAN bug #47786) [justin.d.hunter@gmail.com]
+  - Return ints and bools-cast-to-number from the db as true Perlish numbers.
+    (CPAN bug #47619) [GSM]
 
 2.13.1 Released April 23, 2009 (subversion r12713)
 
